[gd_scene load_steps=9 format=3 uid="uid://n3ffvf5gty7s"]

[ext_resource type="Script" uid="uid://ch75au76kudgp" path="res://Scenes/SauceBottles/base_sauce_bottle.gd" id="1_rck8w"]
[ext_resource type="Resource" uid="uid://cxy8d8lgcuaej" path="res://Resources/ketchup.tres" id="2_wlg4c"]
[ext_resource type="Texture2D" uid="uid://duprnfdb7k65g" path="res://Assets/Sprites/Bottles/basebottle.png" id="3_omrug"]
[ext_resource type="Texture2D" uid="uid://bk3rx8gmsei74" path="res://Assets/Sprites/Bottles/squeezebottle.png" id="4_u3q0l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nn2x8"]
radius = 37.5

[sub_resource type="Animation" id="Animation_omrug"]
resource_name = "squeeze"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_omrug"), ExtResource("4_u3q0l"), ExtResource("3_omrug")]
}

[sub_resource type="Animation" id="Animation_kicyt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_omrug")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kicyt"]
_data = {
&"RESET": SubResource("Animation_kicyt"),
&"squeeze": SubResource("Animation_omrug")
}

[node name="BaseSauceBottle" type="Area2D"]
scale = Vector2(1.36, 1.36)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_rck8w")
sauce_data = ExtResource("2_wlg4c")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nn2x8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.47061, 0)
rotation = 1.51034
scale = Vector2(0.0354355, 0.0670933)
texture = ExtResource("3_omrug")

[node name="ShootingPoint" type="Marker2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(-3.99084, -37.872)

[node name="ShootingTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kicyt")
}
